--- a/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
@@ -2,7 +2,7 @@
 
 {% ifequal component.type 'appkit.evaluatedescription' %}
     <!--R-->
-    <div class="wui-evaluate-container wa-evaluate-container pb10">
+    <div class="wui-evaluate-container wa-evaluate-container">
         <div class="wui-title pr">
             <a class="xa-goBack xui-returnPrev pa">
                 <i id="goBack"></i>
@@ -12,7 +12,7 @@
         <div class="wui-i-header">
             <div class="wui-i-product-info disT mb15 w">
                 <div class="wui-productImg disTc wa-productimg">
-                    <img src="" data-allow-autoplay="false" style="width: 60px; height: 60px;">
+                    <img src="/termite_static/img/component/evaluate/evaluate_common.jpg" data-allow-autoplay="false" style="width: 60px; height: 60px;">
                 </div>
                 <div class="disTc vt pl10">
                     <div class="wui-productname em85 c65 wa-productname">商品名</div>
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="wui-reviewGrade">
-                <span class="c3 em9">商品评价</span>
+                <span class="c3 em9">商品评分</span>
                 <span class="wui-i-product-score wui-starGrade wa-starGrade">
                     <span id='dj_product_score' data-value="5" class="wui-starGrade wui-starGrade5">
                         <i data-grade="1"></i>
@@ -34,7 +34,7 @@
                 </span>
             </div>
             <div class="wui-i-status xui-hidden">已评价</div>
-            <div class="wui-i-uploadimg">
+            <div class="wui-i-uploadimg wa-uploadimg-tm wui-hide">
                 <div class="xui-productPhoto mt10">
                     <div class="xui-addPhoto xa-addPhoto mb10 fl pr">
                         <input name="imgFile123" data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa" multiple>
@@ -60,15 +60,16 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="wui-productPhoto mt10 wui-i-upload-img">
-               <div class="wui-addPhoto wa-addPhoto mb10 fl pr">
-                    <input name="imgFile123" data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa" multiple>
+            <div class="wui-i-uploadimg wa-uploadimg wui-i-uploadimg-common">
+                <div class="xui-productPhoto mt10">
+                    <div class="xui-addPhoto xa-addPhoto mb10 fl pr">
+                        <input name="imgFile123" data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa" multiple>
+                    </div>
+                    <div class="xui-deletePhoto xa-deletePhoto" style="display:none;"></div>
+                    <span class="cRed em95 none xa-finishEdit xui-finishEdit ml10">完成</span>
+                    <span class="em75 xa-text xui-text">上传图片</span>
                 </div>
-                <div class="xui-deletePhoto xa-deletePhoto" style="display:none;">
-                </div>
-                <span class="cRed em95 none xa-finishEdit xui-finishEdit ml10">完成</span>
-                <span class="em75 wa-text wui-text">上传图片</span>
-            </div>   -->
+            </div> 
             <div class="wui-separate"></div>
             <div class="wui-serviceReview mb20">
                 <h2 class="c3 em9">
