--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -100,6 +100,8 @@
 		<input type="checkBox" name="selectAllPrintOrders">
 		<span class="ml5 mr10">全选</span>
 		<a title="批量打印发货单" class="xa-order-print" href="javascript:void(0);">批量打印发货单</a>
+		<a title="合并打印发货单" class="xa-order-merge" href="javascript:void(0);">合并打印发货单</a>
+		<a title="打印快递单" class="xa-order-adress" href="javascript:void(0);">打印快递单</a>		
 		<a href="javascript:void(0);" class="btn fr btn-default xa-export" style="margin:4px 10px;" id="export_data_file">导出结果</a>
 
     </div>
