--- a/weapp/mall/templates/mall/editor/sender_info.html
+++ b/weapp/mall/templates/mall/editor/sender_info.html
@@ -11,24 +11,27 @@
 	<div class="xui-new-adress w975 pr" style="background: #EAEEF6;">
 		<div class="pt20 pl20">添加新地址</div>
 		<div class="xui-i-content mt20 pl50">
-			<form action="/mall2/sender_info_list/" method="get">
-				
+			
+			<!--<form action="/mall2/sender_info/" method="put">-->
+				<form action="/mall2/sender_info/?method=put" method="post">
+
 				<div class="mb10">
 					<label for="" class="star_show">发货人：</label>
-					<input type="text" class="ml10" required/><br />
+					<input type="text" class="ml10" name="sender_name" required/><br />
 				</div>
 				
 			<div class="mb10">
-			<label for="" class="star_show">所在地区：</label>
-			<select name="province" class="province" required>
+			<label class="star_show">所在地区：</label>
+			<select class="xa-province" required>
              	<option value="请选择">请选择省/直辖市</option>            	
              </select>
-			 <select name="city" class="city" required>
+			 <select class="xa-city" required>
              	<option value="请选择">请选择市</option>            	
              </select>
-			 <select name="district" class="district" required>
+			 <select class="xa-district" required>
              	<option value="请选择">请选择区/县</option>            	
              </select><br />
+             <input type="hidden" name="sender_address" />
 			</div>
 
 				<div>
@@ -38,23 +41,23 @@
 					</div>
 				</div><br />
 				<div class="mb10 ">
-					邮政编码：<input type="text" name="" id="" value="" class="ml20"/><br />
+					邮政编码：<input type="text" name="code" class="ml20"/><br />
 				</div>
 				
 				<div class="mb10"> 
 					<label class="star_show fl" >发货人电话：</label>
-					<input type="tel" name="" id="" value="" required/>
+					<input type="tel" name="sender_tel" required/>
 				</div>
 				
 				<div class="mb10">
-					公司名称：<input type="text" class="ml20"/>
+					公司名称：<input type="text" class="ml20" name="company_name"/>
 				</div>
 				
 				<div class="mb10">
 					<label class="fl">备注：</label><textarea name="adress" rows="5" cols="50" class="ml10"></textarea>
 				</div>
 				<div class="mt70 ml200">
-					<input type="submit" name="" id="submitBtn" value="保存" class="btn btn-default" style="border-radius: 10%;"/>
+					<a href="javascript:void(0);" class="btn btn-default xa-submit">保存</a>
 				</div>
 				
 			</form>
@@ -65,8 +68,17 @@
 {% endblock %}
 {% block js %}
 <script type="text/javascript">
-
+    
 	$(document).ready(function() {
+		$('.xa-submit').on('click',function(){
+    	var sender_address = $('.xa-province').val()+$('.xa-city').val()+$('.xa-district').val();
+    	$('[name="sender_address"]').val(sender_address);
+    	var args = $('form').serializeObject();
+    	$('form').submit();
+    	console.log('%%',args,sender_address);
+       });
+       
+       
 		var obj = {
 			init: function () {
 				this.getPrvince();
@@ -93,7 +105,7 @@
 						for(var i=0,len=_data.length;i<len;i++){
 							option+='<option value="'+_data[i]+'" data-id="'+(i+1)+'">'+_data[i]+'</option>';				
 						}
-						$('.province').html(option);
+						$('.xa-province').html(option);
 						_this.selectProvince();
 					},
 					error: function(resp) {
@@ -103,12 +115,12 @@
 			// 选择省份
 			selectProvince: function() {
 				var _this = this;
-				$('.province').on('click',function() {
+				$('.xa-province').on('click',function() {
 					var $self = $(this);
 					if($self.find('option:selected').html() != "请选择省份/直辖市") {
 						_this.getCity();
 					}else{
-						$('.city').html('<option>请选择市</option>');
+						$('.xa-city').html('<option>请选择市</option>');
 					}
 				});
 			},
@@ -116,7 +128,7 @@
 			// 获取城市
 			getCity: function() {
 				var _this = this;
-                var id = $('.province').find('option:selected').data('id')
+                var id = $('.xa-province').find('option:selected').data('id')
 //              console.log(id);
                    W.getApi().call({
                     method: 'get',
@@ -130,7 +142,7 @@
 						})
 
 
-						$('.city').html(option);
+						$('.xa-city').html(option);
 						_this.selectDistrict();
 					},
 					error: function(resp) {
@@ -141,12 +153,12 @@
 			//选择区县
 			selectDistrict: function() {
 				var _this = this;
-				$('.city').on('click',function() {
+				$('.xa-city').on('click',function() {
 					var $self = $(this);
 					if($self.find('option:selected').html() != "请选择市") {
 						_this.getDistrict();
 					}else{
-						$('.district').html('<option>请选择市</option>');
+						$('.xa-district').html('<option>请选择市</option>');
 					}
 				});
 			},
@@ -154,7 +166,7 @@
 			// 获取区/县
 			getDistrict: function() {
 				var _this = this;
-                var id=$('.city').find('option:selected').data('id');
+                var id=$('.xa-city').find('option:selected').data('id');
 //              console.log(id);
                    W.getApi().call({
                     method: 'get',
@@ -166,7 +178,7 @@
 //							console.log(data,i)
 							option+='<option value="'+data+'" data-id="'+i+'">'+data+'</option>';
 						})
-						$('.district').html(option);
+						$('.xa-district').html(option);
 					},
 					error: function(resp) {
 					}
