--- a/weapp/mall/templates/mall/editor/sender_info.html
+++ b/weapp/mall/templates/mall/editor/sender_info.html
@@ -75,7 +75,17 @@
     	$('[name="sender_address"]').val(sender_address);
     	var args = $('form').serializeObject();
     	$('form').submit();
-    	console.log('%%',args,sender_address);
+    	  W.getApi().call({
+          method: 'put',
+          app: 'mall2',
+          resource: 'sender_info',
+          args:args,
+	      success: function(data) {
+				window.location.href = '/mall2/sender_info_list/';
+					},
+					error: function(resp) {
+					}
+				});
        });
        
        
