修改会员分组

--- a/weapp/apps/customerized_apps/evaluate/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/workbench.html
@@ -154,7 +154,7 @@
                 if('custom' === select_type){
                     $body.hide();
                     $container_sibs.show();
-                    $frame.find('.wa-uploadimg-tm').removeClass('wui-hide');
+                    $frame.find('.wa-uploadimg-tm').removeClass('wui-hide').addClass('wui-pf');
                     $frame.find('.wa-evaluate-container').parent().siblings().addClass('wui-evaluate-component');
                 }else{
                     $body.show();
