--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_evaluate.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_evaluate.html
@@ -38,8 +38,8 @@
         }
         if(W.isPC) return;
         getDynamicData();
-         $('.wa-evaluate-container').siblings().find('.wui-i-title').addClass('wui-evaluate-title');
          $('.wa-evaluate-container').siblings().addClass('wui-evaluate-component');
+         $('.wa-uploadimg-tm').removeClass('wui-pf').addClass('wui-pa');
     });
 
     //获取商品和评价信息
