--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
@@ -59,6 +59,7 @@ a{
 }
 .xui-evaluate-table > tbody> tr > td{
     text-align: left;
+    word-break: break-all;
 }
 .xui-evaluate-table > tbody > tr > td:last-child{
     width: 70%;
