--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
@@ -152,7 +152,7 @@ a{
             <td width="95" style="text-align:left;">{{html review.user_name}}</td>
             <td width="150">${review.created_at}</td>
             <td width="190" style="text-align:left;"><div style="overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width:190px;">{{if review.is_common_template }}
-                {{review.detail}}
+                ${review.detail}
               {{else}}
                 {{each(i,item) review.detail }}
                   ${item.title}:${item.answer};
