--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
@@ -201,13 +201,13 @@
         $('.xa-toggleBtn').click(function(){
             if($(this).html() == '展开'){
                 $(this).html('收起');
-                $('.xa-productReviewText').removeClass('xui-text-ellipsis');
-                $('.xa-arrow').removeClass('xui-arrow').addClass('xui-arrow-up');
+                $(this).parents('.xui-productReview').find('.xa-productReviewText').removeClass('xui-text-ellipsis');
+                $(this).parents('.xui-productReview').find('.xa-arrow').removeClass('xui-arrow').addClass('xui-arrow-up');
                 $(this).parents('.xui-productReview').find('.xui-uploadImg').removeClass('wui-hide');      
             }else{
                 $(this).html('展开');
-                $('.xa-productReviewText').addClass('xui-text-ellipsis');
-                $('.xa-arrow').removeClass('xui-arrow-up').addClass('xui-arrow');
+                $(this).parents('.xui-productReview').find('.xa-productReviewText').addClass('xui-text-ellipsis');
+                $(this).parents('.xui-productReview').find('.xa-arrow').removeClass('xui-arrow-up').addClass('xui-arrow');
                 $(this).parents('.xui-productReview').find('.xui-uploadImg').addClass('wui-hide');                  
             }
         });
