--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
@@ -85,7 +85,7 @@ a{
     <div class="panel panel-default mt20 xb-rightPanel">
         <div class="panel-header clearfix">
             <a href="javascript: void 0" class="btn btn-default fr ml10 mr10 mt10 xa-export">
-				下载导出文件
+				导出文件
 			</a>
 			<a href="/apps/evaluate/evaluate/" class="btn btn-default fr ml10 mt10">
 				评价模版
@@ -240,48 +240,30 @@ $(document).ready(function(){
     view.render();
 
 
-    $('.panel-body').delegate('.xa-export', 'click', function(event){
+    $('body').delegate('.xa-export', 'click', function(event){
+        var startDate = $.trim($('#start_date').val());
+        var endDate = $.trim($('#end_date').val());
+        var name = $.trim($('#name').val());
+        var reviewStatus = $('#review_status').val();
+        var userCode = $.trim($('#user_code').val());
+        var productScore = $.trim($('#product_score').val());
         W.getApi().call({
-            app: 'export_job',
-            resource: 'export_is_download',
+            app: 'apps/evaluate',
+            resource: 'evaluates_export',
             method: 'get',
             args: {
-                woid: woid,
-                type: 2,
+                startDate: startDate,
+                endDate: endDate,
+                name: name,
+                reviewStatus: reviewStatus,
+                userCode: userCode,
+                productScore: productScore,
             },
             success: function(data) {
-                if (data["status"] === 1 && data["is_download"] === 0){
-                    W.showHint('error', '导出的文件尚未下载，请刷新页面进行下载！');
-                }
-                else if(data["status"] === 0 && data["is_download"] === 0){
-                    W.showHint('success', '文件正在导出，请刷新页面进行查看！');
-
-                }
-                else{
-                    var url ='';
-                    var filter_value = '';
-                    if (view.filterView.filterValue) {
-                        filter_value = view.filterView.filterValue;
-                    };
-                    var options = {
-                        el: '.panel-body',
-                        topic_id: '',
-                        type: 2,
-                        url: url,
-                        jobId:0,
-                        filter_value:filter_value,
-                        isAlreadyExport : true,
-                        app: 'mall2',
-                        resource: 'export_file_param',
-                        timelinesOptions: {
-
-                        }
-                    }
-                    var customersView = new W.CustomersView(options);
-                }
+                W.showHint('success', '导出成功！');
             },
             error: function(response) {
-                W.showHint('error', '网络超时，导出中断，请重试！');
+                W.showHint('error', '导出失败，请重试！');
             }
         });
 
@@ -289,43 +271,7 @@ $(document).ready(function(){
 
     var table = $('div[data-ui-role="advanced-table"]').data('view');
 
-
-    var export2data = {{export2data|safe}};
-    var woid = "{{ request.manager.id }}";
-    if(export2data["status"] ===1 && export2data["is_download"] ===0 ){
-        table.afterload = function(){
-            var options = {
-                el: '.div_export',
-                topic_id: '',
-                type: 2,
-                url: "",
-                jobId:export2data["id"],
-                isAlreadyExport : true,
-                timelinesOptions: {
-                }
-            }
-            var exportFileView = new W.dialog.ExportFileView(options);
-            exportFileView.finish();
-        };
-    }
-    else if(export2data["status"] ===0 && export2data["is_download"] ===0 ){
-        table.afterload = function(){
-
-            var jobId = export2data["id"];
-            var options = {
-                el: '.div_export',
-                topic_id: '',
-                type: 2,
-                url: "",
-                jobId:export2data["id"],
-                isAlreadyExport : true,
-                timelinesOptions: {
-                }
-            }
-            var exportFileView = new W.dialog.ExportFileView(options);
-            exportFileView.doExportAfterApi();
-        };
-    };
+{#    var woid = "{{ request.manager.id }}";#}
 
     $('.panel-body').delegate('.xa-verify','click',function(){
         var product_review_id = $(this).attr('data-product-review-id');
